syntax = 'proto3';

package validator;

option go_package = "github.com/hyperledger/burrow/acm/validator";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

import "crypto.proto";

option (gogoproto.stable_marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.goproto_registration) = true;
option (gogoproto.messagename_all) = true;

message Validator {
    option (gogoproto.goproto_stringer) = false;
    bytes Address = 1 [(gogoproto.customtype) = "github.com/hyperledger/burrow/crypto.Address"];
    crypto.PublicKey PublicKey = 2 [(gogoproto.nullable) = false];
    uint64 Power = 3;
}
